metadata/force-app/main/default/objects/Pricebook2/fields/checkbox1__c.field-meta.xml
<CustomField>
    <fullName>checkbox1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>checkbox1</label>
    <type>Checkbox</type>
</CustomField>