metadata/force-app/main/default/objects/Pricebook2/fields/jj_test_area__c.field-meta.xml
<CustomField>
    <fullName>jj_test_area__c</fullName>
    <label>jj test area</label>
    <type>TextArea</type>
</CustomField>