metadata/force-app/main/default/objects/Pricebook2/fields/number_id__c.field-meta.xml
<CustomField>
    <fullName>number_id__c</fullName>
    <label>number id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>