metadata/force-app/main/default/objects/Pricebook2/fields/pick_me__c.field-meta.xml
<CustomField>
    <fullName>pick_me__c</fullName>
    <label>pick me</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__JobStatus</valueSetName>
    </valueSet>
</CustomField>